[Fix] Remove Index column

--- a/clean-csv.ipynb
+++ b/clean-csv.ipynb
@@ -570,7 +570,10 @@
     }
    },
    "cell_type": "code",
-   "source": "df = df.drop(['DateDeNaissance'], axis=1)",
+   "source": [
+    "df = df.drop(['DateDeNaissance'], axis=1)\n",
+    "df = df.drop(['Index'], axis=1)"
+   ],
    "id": "1b53879497e36b",
    "outputs": [],
    "execution_count": 6
