[Fix] Age filling gap

--- a/clean-csv.ipynb
+++ b/clean-csv.ipynb
@@ -18,7 +18,7 @@
    },
    "source": [
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
+    "fromotlib import pyplot as plt\n",
     "import seaborn as sns"
    ],
    "outputs": [],
@@ -765,7 +765,7 @@
    },
    "cell_type": "code",
    "source": [
-    "df['Age'] = df['Age'].fillna(0).astype('int64')\n",
+    "df['Age'] = df['Age'].fillna(18).astype('int64')\n",
     "\n",
     "print(df['Age'].dtypes)"
    ],
