--- a/clean-csv.ipynb
+++ b/clean-csv.ipynb
@@ -18,7 +18,7 @@
    },
    "source": [
     "import pandas as pd\n",
-    "fromotlib import pyplot as plt\n",
+    "from matplotlib import pyplot as plt\n",
     "import seaborn as sns"
    ],
    "outputs": [],
